<resources>
    <string name="app_name">AddNumbers</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>
    <string name="num1">Number 1</string>
    <string name="num2">Number 2</string>
    <string name="dectobin">Dec to Bin</string>
    <string name="dectohex">Dec to Hex</string>
</resources>
