<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/num1Input"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/num1"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/num2Input"
        android:layout_below="@+id/num1Input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/num1Input"
        android:layout_alignEnd="@+id/num1Input"
        android:text="@string/num2"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/addButton"
        android:layout_marginTop="28dp"
        android:onClick="onAddButtonClick"
        android:layout_below="@+id/num2Input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ConvBinbutton"
        android:layout_alignEnd="@+id/ConvBinbutton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtract"
        android:id="@+id/subtractButton"
        android:onClick="onSubtractButtonClick"
        android:layout_alignTop="@+id/addButton"
        android:layout_alignRight="@+id/ConvHexbutton"
        android:layout_alignEnd="@+id/ConvHexbutton"
        android:layout_alignLeft="@+id/ConvHexbutton"
        android:layout_alignStart="@+id/ConvHexbutton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:id="@+id/multiplyButton"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/addButton"
        android:layout_alignStart="@+id/addButton"
        android:onClick="onMultiplyButtonClick"
        android:layout_alignRight="@+id/ConvBinbutton"
        android:layout_alignEnd="@+id/ConvBinbutton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:id="@+id/divideButton"
        android:onClick="onDivideButtonClick"
        android:layout_alignTop="@+id/multiplyButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/subtractButton"
        android:layout_alignStart="@+id/subtractButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/userResult"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear"
        android:id="@+id/clearButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClearButtonClick"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dectobin"
        android:id="@+id/ConvBinbutton"
        android:onClick="onConvBinary"
        android:singleLine="true"
        android:layout_alignTop="@+id/ConvHexbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dectohex"
        android:id="@+id/ConvHexbutton"
        android:onClick="onConvHexadecimal"
        android:singleLine="true"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/divideButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
